# azsm

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup.py
azsm/: __init__.py  __main__.py  analyzer.py  cost_calculator.py  pricing_client.py  report_generator.py  resource_collector.py
azsm/azsm/: MANIFEST.in  README.md  pricing_client.py  pyproject.toml  setup.cfg  setup.py
azure_cost_analyzer/: __init__.py  __main__.py  analyzer.py  cost_calculator.py  pricing_client.py  utils.py
azure_cost_analyzer/azure_cost_analyzer/: MANIFEST.in  README.md  pyproject.toml  setup.py
