[metadata]
name = azure-cost-analyzer
version = 0.1.0
description = Azure Save Money | azsm package for analyzing Azure resources and calculating potential cost savings.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/azure-cost-analyzer
license = MIT
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent

[options]
packages = find:
 python_requires = >=3.6
 install_requires =
     # Add your package dependencies here
     # e.g. requests>=2.25.1
     # azure-mgmt-resource>=18.0.0

[options.packages.find]
exclude =
    tests*